Make sure the menu is not visible upon page load

--- a/assets/css/mobile-menu.css
+++ b/assets/css/mobile-menu.css
@@ -13,6 +13,7 @@
 .mobile_menu {
     position: fixed;
     z-index: 100;
+    display: none;
 }
 
 .mobile_menu .inner {
